--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "@unocss/reset": "^0.51.3",
+    "@vue/typescript": "^1.8.11",
     "@vueuse/core": "^9.13.0",
     "@vueuse/head": "^1.1.23",
     "nprogress": "^0.2.0",
@@ -69,7 +70,7 @@
     "vite-ssg": "^0.22.2",
     "vite-ssg-sitemap": "^0.4.3",
     "vitest": "^0.30.1",
-    "vue-tsc": "^1.2.0"
+    "vue-tsc": "^1.3.8"
   },
   "simple-git-hooks": {
     "pre-commit": "pnpm lint-staged"
